--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,12 @@
     "oled-extra-commands oled-extra-commands";
 }
 
-.nav { grid-area: nav; }
+.nav { 
+  grid-area: nav; 
+}
 
-.video-container {  display: grid;
+.video-container {  
+  display: grid;
   grid-template-columns: 0.6fr 1.8fr 0.6fr;
   grid-template-rows: 1.7fr 0.3fr;
   gap: 0px 0px;
@@ -25,11 +28,16 @@
   grid-area: video-container;
 }
 
-.video { grid-area: video; }
+.video { 
+  grid-area: video; 
+}
 
-.video-description { grid-area: video-description; }
+.video-description { 
+  grid-area: video-description; 
+}
 
-.color-control-container {  display: grid;
+.color-control-container {  
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.7fr 1.7fr 0.6fr;
   gap: 0px 0px;
@@ -41,13 +49,20 @@
   grid-area: color-control-container;
 }
 
-.color-control-header { grid-area: color-control-header; }
+.color-control-header { 
+  grid-area: color-control-header; 
+}
 
-.color-control-button-container { grid-area: color-control-button-container; }
+.color-control-button-container { 
+  grid-area: color-control-button-container; 
+}
 
-.color-control { grid-area: color-control; }
+.color-control { 
+  grid-area: color-control; 
+}
 
-.oled-text-control-container {  display: grid;
+.oled-text-control-container {  
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.7fr 1.7fr 0.6fr;
   gap: 0px 0px;
@@ -59,13 +74,20 @@
   grid-area: oled-text-control-container;
 }
 
-.oled-text-control-header { grid-area: oled-text-control-header; }
+.oled-text-control-header { 
+  grid-area: oled-text-control-header; 
+}
 
-.oled-text-area { grid-area: oled-text-area; }
+.oled-text-area { 
+  grid-area: oled-text-area; 
+}
 
-.oled-text-button-container { grid-area: oled-text-button-container; }
+.oled-text-button-container { 
+  grid-area: oled-text-button-container; 
+}
 
-.oled-extra-commands {  display: grid;
+.oled-extra-commands {  
+  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   gap: 0px 0px;
@@ -79,22 +101,42 @@
   grid-area: oled-extra-commands;
 }
 
-.oled-extra-commands-header { grid-area: oled-extra-commands-header; }
+.oled-extra-commands-header { 
+  grid-area: oled-extra-commands-header; 
+}
 
-.oled-extra-command-button-1 { grid-area: oled-extra-command-button-1; }
+.oled-extra-command-button-1 { 
+  grid-area: oled-extra-command-button-1; 
+}
 
-.oled-extra-command-button-2 { grid-area: oled-extra-command-button-2; }
+.oled-extra-command-button-2 { 
+  grid-area: oled-extra-command-button-2; 
+}
 
-.oled-extra-command-button-3 { grid-area: oled-extra-command-button-3; }
+.oled-extra-command-button-3 { 
+  grid-area: oled-extra-command-button-3; 
+}
 
-.oled-extra-command-button-4 { grid-area: oled-extra-command-button-4; }
+.oled-extra-command-button-4 { 
+  grid-area: oled-extra-command-button-4; 
+}
 
-.oled-extra-command-button-5 { grid-area: oled-extra-command-button-5; }
+.oled-extra-command-button-5 { 
+  grid-area: oled-extra-command-button-5; 
+}
 
-.oled-extra-command-button-6 { grid-area: oled-extra-command-button-6; }
+.oled-extra-command-button-6 { 
+  grid-area: oled-extra-command-button-6; 
+}
 
-.oled-extra-command-button-7 { grid-area: oled-extra-command-button-7; }
+.oled-extra-command-button-7 { 
+  grid-area: oled-extra-command-button-7; 
+}
 
-.oled-extra-command-button-8 { grid-area: oled-extra-command-button-8; }
+.oled-extra-command-button-8 { 
+  grid-area: oled-extra-command-button-8; 
+}
 
-div {border: 1px solid cornflowerblue;}
+div {
+  border: 1px solid cornflowerblue;
+}
