--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,11 @@
 }
 
 .nav { 
-  grid-area: nav; 
+  grid-area: nav;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .video-container {  
@@ -29,11 +33,19 @@
 }
 
 .video { 
-  grid-area: video; 
+  grid-area: video;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; 
 }
 
 .video-description { 
-  grid-area: video-description; 
+  grid-area: video-description;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; 
 }
 
 .color-control-container {  
@@ -50,15 +62,27 @@
 }
 
 .color-control-header { 
-  grid-area: color-control-header; 
+  grid-area: color-control-header;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .color-control-button-container { 
-  grid-area: color-control-button-container; 
+  grid-area: color-control-button-container;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .color-control { 
-  grid-area: color-control; 
+  grid-area: color-control;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-text-control-container {  
@@ -75,15 +99,27 @@
 }
 
 .oled-text-control-header { 
-  grid-area: oled-text-control-header; 
+  grid-area: oled-text-control-header;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-text-area { 
-  grid-area: oled-text-area; 
+  grid-area: oled-text-area;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-text-button-container { 
-  grid-area: oled-text-button-container; 
+  grid-area: oled-text-button-container;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-commands {  
@@ -102,39 +138,75 @@
 }
 
 .oled-extra-commands-header { 
-  grid-area: oled-extra-commands-header; 
+  grid-area: oled-extra-commands-header;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-command-button-1 { 
   grid-area: oled-extra-command-button-1; 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; 
 }
 
 .oled-extra-command-button-2 { 
-  grid-area: oled-extra-command-button-2; 
+  grid-area: oled-extra-command-button-2;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-command-button-3 { 
-  grid-area: oled-extra-command-button-3; 
+  grid-area: oled-extra-command-button-3;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-command-button-4 { 
   grid-area: oled-extra-command-button-4; 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; 
 }
 
 .oled-extra-command-button-5 { 
-  grid-area: oled-extra-command-button-5; 
+  grid-area: oled-extra-command-button-5;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-command-button-6 { 
-  grid-area: oled-extra-command-button-6; 
+  grid-area: oled-extra-command-button-6;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-command-button-7 { 
-  grid-area: oled-extra-command-button-7; 
+  grid-area: oled-extra-command-button-7;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 .oled-extra-command-button-8 { 
-  grid-area: oled-extra-command-button-8; 
+  grid-area: oled-extra-command-button-8;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
 }
 
 div {
