--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   grid-auto-flow: row;
   grid-template-areas:
     ". video ."
-    ". video-description .";
+    ". message-display .";
   grid-area: video-container;
 }
 
@@ -40,8 +40,8 @@
   justify-content: center; 
 }
 
-.video-description { 
-  grid-area: video-description;
+.message-display { 
+  grid-area: message-display;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -109,7 +109,7 @@
 .oled-text-area { 
   grid-area: oled-text-area;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;  
 }
